--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,9 @@ jobs:
       - name: Install dependencies with composer
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
 
+      - name: Change wrapper permissions
+        run: chmod +x ./init
+
       - name: Setup app advanced
         run: |
           ./init --env=Development
